# lwir_construct

./: .gitignore  CMakeLists.txt  README.md
inc/: Camera.h  ConstructDialog.h  MainWindow.h  SerialPort.h  SpectralPlotWidget.h  cam_info.h  curve.h  daheng_camera.h  mat2bmp.h
src/: Camera.cpp  ConstructDialog.cpp  MainWindow.cpp  SerialPort.cpp  SpectralPlotWidget.cpp  cam_info.cpp  curve.cpp  daheng_camera.cpp  main.cpp  mat2bmp.cpp
ui/: camera_info.ui  construct.ui  curve.ui  main.ui  mat2bmp.ui
